
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2003 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVS-HEAD

  - Fixed build problems under Mac OS X 10.3.
  - Use "-pipe" when compiling with gcc, speeds things up a little :-)
  - Added new configuration variable "Listen" to bind all listening
    sockets of the server to a single IP address.
  - Suppress misleading error message of diff during make run.
  - Enhanced test-suite and made it work on GNU/Hurd.
  - Fixed minor typo in debug output :-)

ngIRCd 0.7.1 (2003-07-18)

  - Included files to build Debian packages (located in "debian/").
  - Updated config.guess and config.sub to newer upstream versions.
  - NJOIN propagates user channel modes correctly again ... Upsa.
  - Made Makefile more compatible with "make -j<n>".
  - Added support for GNU/Hurd.
  - Fixed a compiler warning related to an unnecessary assert().
  - Enhanced VERSION command when using debug versions.

ngIRCd 0.7.0 (2003-05-01)

  - "ServerName" is checked better now: a dot (".") is required.
  - The KILL command verifies and logs more parameters.

  ngIRCd 0.7.0-pre2 (2003-04-27)
  - CVS build system fixes (made autogen.sh more portable).
  - Fixed compilation and test-suite on Solaris (tested with 2.6).
  - New documentation file "doc/Platforms.txt" describing the status of
    ngIRCd on the various tested platforms.
  - Test for broken GCC on Mac OS X and disable "-pedantic" in this case.
  - Disable "-ansi" on Cygwin: system headers are incompatible.
  - The server tried to connect to other servers only once when DNS or
    socket failures occurred.
  - Fixed --configtest: There is no variable "ServerPwd", it's "Password".

  ngIRCd 0.7.0-pre1 (2003-04-22)